<resources>
    <string name="app_name">TechNova</string>
    <string name="welcome_title">Bienvenido</string>
    <string name="btn_start">Comenzar</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_register">Registrarme</string>
    <string name="hint_name">Nombre completo</string>
    <string name="hint_email">Correo electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_phone">Teléfono</string>
    <string name="login_question">¿No tienes cuenta?</string>
    <string name="login_register">Regístrate</string>
    <string name="profile_title">Perfil de usuario</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="configurar_administrador_titulo">Configurar administrador</string>
    <string name="hint_confirmar_contrasena">Confirmar Contraseña</string>
    <string name="btn_crear_administrador">Crear Administrador</string>
    <string name="nombre_producto">Nombre producto</string>
    <string name="descripcion_producto">Descripción producto</string>
    <string name="precio_producto">$0.00</string>
    <string name="btn_agregar_producto">Agregar producto</string>
    <string name="stock_producto">Stock</string>
    <string name="btn_seleccionar_imagen">Seleccionar imagen</string>
    <string name="btn_guardar">Guardar</string>
    <string name="profile_update_btn">ACTUALIZAR</string>
    <string name="profile_avatar_cd">Foto de perfil</string>
    <string name="profile_no_user_logged">No se encontró usuario logueado</string>
    <string name="profile_user_not_found">Usuario no encontrado en la base de datos</string>
    <string name="profile_update_success">Perfil actualizado</string>
    <string name="profile_update_error">Error al actualizar el perfil</string>
    <string name="profile_name_required">Ingresa tu nombre</string>
    <string name="profile_email_invalid">Correo no válido</string>
    <string name="location_perm_denied">Permisos de ubicación denegados</string>
    <string name="sp_file">technova_prefs</string>
    <string name="sp_key_user_email">usuarioCorreo</string>
    <string name="register_fill_all">Por favor, completa todos los campos</string>
    <string name="register_email_invalid">Por favor, ingresa un email válido</string>
    <string name="register_password_minlen">La contraseña debe tener al menos 6 caracteres</string>
    <string name="register_email_exists">El correo ya está registrado</string>
    <string name="register_success">Usuario registrado exitosamente</string>
    <string name="register_failure">Error al registrar el usuario</string>
    <string name="bnt_finalizar_compra">Finalizar Compra</string>
    <string name="text_total">Total</string>
    <string name="text_total_pagar">$0.00"</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quantity">1</string>
</resources>
