<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/tn_blue_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/gradient_2"
        android:paddingVertical="25dp"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/edtProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_producto"
            android:ems="10"
            android:background="@drawable/bg_input"
            android:textColor="@color/tn_white"
            android:textColorHint="@color/tn_gray"/>

        <EditText
            android:id="@+id/edtProductDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_producto"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:background="@drawable/bg_input"
            android:textColor="@color/tn_white"
            android:textColorHint="@color/tn_gray"/>

        <EditText
            android:id="@+id/edtProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio_producto"
            android:inputType="numberDecimal"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:background="@drawable/bg_input"
            android:textColor="@color/tn_white"
            android:textColorHint="@color/tn_gray"/>

        <EditText
            android:id="@+id/edtProductStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/stock_producto"
            android:inputType="number"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:background="@drawable/bg_input"
            android:textColor="@color/tn_white"
            android:textColorHint="@color/tn_gray"/>

        <ImageView
            android:id="@+id/imgPreview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="12dp"
            android:padding="10dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder" />

        <Button
            android:id="@+id/btnPickImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_seleccionar_imagen"
            android:layout_marginTop="8dp"
            android:textSize="15sp"
            app:backgroundTint="@null"
            android:background="@drawable/btn_primary"
            />


        <Button
            android:id="@+id/btnSaveProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:layout_marginTop="16dp"
            android:textSize="15sp"
            app:backgroundTint="@null"
            android:background="@drawable/btn_primary"/>

    </LinearLayout>
</ScrollView>
