<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tn_blue_dark"
    android:paddingTop="80dp"
    android:paddingBottom="20dp"
    android:paddingHorizontal="20dp">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo_technova_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:background="@drawable/gradient_2"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        android:paddingVertical="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/etEmail"
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:background="@drawable/bg_input"
            android:inputType="textEmailAddress"
            android:textColor="@color/tn_white"
            android:textColorHint="@color/tn_gray"
            />

        <EditText
            android:id="@+id/etPassword"
            android:hint="@string/hint_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_input"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"
            android:textColor="@color/tn_white"
            android:textColorHint="@color/tn_gray"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/etPassword"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                app:backgroundTint="@null"
                android:background="@drawable/btn_primary"
                android:text="@string/btn_login" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_question"
                    android:textColor="@color/tn_gray"
                    android:layout_marginEnd="10dp"
                    />

                <TextView
                    android:id="@+id/tvRegister" android:text="@string/login_register"
                    android:textColor="@color/tn_cyan"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    />
            </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>