<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="@color/tn_blue_dark_opacity_80">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="8dp"
        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_producto"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/tn_white"/>

            <TextView
                android:id="@+id/tvProductDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descripcion_producto"
                android:maxLines="2"
                android:ellipsize="end"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:textColor="@color/tn_gray"/>

            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_producto"
                android:layout_marginTop="6dp"
                android:textColor="@color/tn_white"/>
            <ImageButton
                android:id="@+id/btnAddCart"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_cart"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:tint="@color/tn_white"
                android:contentDescription="Agregar al carrito"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
