<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tn_blue_dark"
    tools:context=".fragments.CartFragment">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondo_productos"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerCart"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottomLayout"
        tools:listitem="@layout/item_cart" />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/tn_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginBottom="12dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_total"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/tn_blue_dark"/>

            <TextView
                android:id="@+id/tvTotalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/text_total_pagar"/>
        </LinearLayout>

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            app:backgroundTint="@null"
            android:text="@string/bnt_finalizar_compra"
            android:background="@drawable/btn_primary"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>