<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/tools"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    card_view:cardBackgroundColor="@color/tn_blue_dark_opacity_80">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:background="@android:color/transparent"
        >

        <ImageView
            android:id="@+id/imgProduct"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:scaleType="centerCrop"
            android:src="@drawable/image_placeholder"
            android:layout_marginEnd="10dp"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/tvProductName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/nombre_producto"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/tn_white"/>

            <LinearLayout
                android:id="@+id/quantityControls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <ImageButton
                    android:id="@+id/btnDecrement"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/minus_circle"
                    app:tint="@color/tn_white"
                    android:background="?attr/selectableItemBackgroundBorderless"/>

                <TextView
                    android:id="@+id/tvQuantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/quantity"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/tn_white"/>

                <ImageButton
                    android:id="@+id/btnIncrement"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/plus_circle"
                    app:tint="@color/tn_white"
                    android:background="?attr/selectableItemBackgroundBorderless"/>
            </LinearLayout>



        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/tvProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precio_producto"
                android:textColor="@color/tn_white"
                android:textSize="20sp"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnRemove"
            android:layout_width="30dp"
            android:layout_height="58dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/trash"
            app:tint="@color/tn_white" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
