<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tn_blue_dark"
    android:paddingTop="80dp"
    android:paddingBottom="20dp"
    android:paddingHorizontal="20dp">

    <ImageView
        android:id="@+id/logoRegister"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_technova_claro"
        android:contentDescription="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollForm"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/logoRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:id="@+id/form_container_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/gradient_2"
            android:paddingHorizontal="25dp"
            android:paddingVertical="28dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="35dp"
            app:layout_constraintTop_toBottomOf="@id/logoRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


        <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="22sp"
                android:textColor="@color/tn_white"
                android:layout_marginBottom="12dp"/>

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nombre Completo"
                android:background="@drawable/bg_input"
                android:textColor="@color/tn_white"
                android:textColorHint="@color/tn_gray"
                android:padding="12dp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/bg_input"
                android:textColor="@color/tn_white"
                android:textColorHint="@color/tn_gray"
                android:padding="12dp"
                android:layout_marginTop="16dp"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:background="@drawable/bg_input"
                android:textColor="@color/tn_white"
                android:textColorHint="@color/tn_gray"
                android:padding="12dp"
                android:layout_marginTop="16dp"/>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CREAR CUENTA"
                android:textSize="15sp"
                android:textColor="@color/tn_white"
                android:background="@drawable/btn_primary"
                app:backgroundTint="@null"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¿Ya tienes cuenta?"
                    android:textColor="@color/tn_gray"
                    android:layout_marginEnd="8dp"/>

                <TextView
                    android:id="@+id/tvGoLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Inicia sesión"
                    android:textColor="@color/tn_cyan"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

